--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "Game100",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
+    "ionic": "driftyco/ionic-bower#1.2.4",
+    "ionic-platform-web-client": "~0.7.1"
   },
   "dependencies": {
     "ngCordova": "~0.1.24-alpha"
