--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
-    "com.ionic.keyboard",
-    "phonegap-plugin-push"
+    "com.ionic.keyboard"
   ],
   "cordovaPlatforms": [
     "ios"
